fix: [PL-42117]: secret name overlap on list view (#18548)
* fix: [PL-42117]: secret name overlap on list view

* fix: [PL-42117]: fix tests

--- a/src/modules/27-platform/secrets/pages/secrets/views/SecretsListView/SecretsList.module.scss
+++ b/src/modules/27-platform/secrets/pages/secrets/views/SecretsListView/SecretsList.module.scss
@@ -8,13 +8,7 @@
 .table {
   padding: var(--spacing-small) var(--spacing-xlarge);
 
-  .name {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  .secretFlex {
+    flex: 1;
   }
-}
-
-.secretName {
-  word-break: break-all;
 }
